@@ -165,6 +165,8 @@ public:
     int64_t sum(size_t start = 0, size_t end = -1) const;
     int64_t maximum(size_t start = 0, size_t end = -1) const;
     int64_t minimum(size_t start = 0, size_t end = -1) const;
+    double  average(size_t start = 0, size_t end = -1) const;
+
     void sort(size_t start, size_t end);
     void ReferenceSort(size_t start, size_t end, Column &ref);
 
